# django-keycloak

./: .coveragerc  .gitignore  .travis.yml  DockerfileDocs  LICENSE  Makefile  README.md  README.rst  SETUP-README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/scenario/: example_project.rst  initial_setup.rst  local_user_setup.rst  migrating.rst  multi_tenancy.rst  permissions_by_resources_and_scopes.rst  permissions_by_resourcs_and_scopes.rst  permissions_by_roles.rst  remote_user_setup.rst
example/: README.md  docker-compose.yml
example/keycloak/export/: example-realm.json  example-users-0.json  master-realm.json  master-users-0.json
example/nginx/certs/: README.md  ca.key  ca.pem  localhost.yarf.nl.cert  localhost.yarf.nl.csr  localhost.yarf.nl.key  ssl.ext
example/nginx/conf.d/: identity.localhost.yarf.nl.conf  resource-provider-api.localhost.yarf.nl.conf  resource-provider.localhost.yarf.nl.conf
example/resource-provider/: Dockerfile  manage.py
example/resource-provider-api/: Dockerfile  requirements.txt
example/resource-provider-api/docker/: entrypoint-dev.sh
example/resource-provider-api/myapp/: settings.py  urls.py  views.py  wsgi.py
example/resource-provider/docker/: entrypoint-dev.sh
example/resource-provider/myapp/: apps.py  settings.py  (+2 more)
src/django_keycloak/: __init__.py  app_settings.py  apps.py  context_processors.py  factories.py  hashers.py  middleware.py  models.py  remote_user.py  response.py  signals.py  stateless_user.py  urls.py  views.py
(+68 files in other folders)
